# relatorio-pdi-experimentos

./: .gitignore  CMakeLists.txt
src/: escala_cinza.cpp  exercicio_1_prova.cpp  exercicio_2_prova.cpp  exercicio_3_prova.cpp  exercicio_4_prova.cpp  prova.cpp  segmentacao.cpp
